Revision History
=================

-------------------------------------------------------------------------------
dcm4che 1.0.6 -  - Changes since dcm4che 1.0.5
-------------------------------------------------------------------------------
BUG FIXES:
+ class org.dcm4che.imageio.plugins.DcmImageWriteParam:
  Fix value for Pixel Aspect Ratio from 1 to int[]{1,1}
+ class org.dcm4che.imageio.plugin.DcmImageReader#getAspectRatio
  did not consider pixel aspect ratio != 1:1

ENHANCEMENTS:
+ class org.dcm4che.data.DcmParser: add method
  long parseDataset(String tsUID, int stopTag) throws IOException
+ add Status Code Definitions for Print Management Service Class
+ class org.dcm4che.imageio.plugin.DcmImageReader: support of P-value to
  Device-Driver-Level transformation by DcmReadImageParam#setPValToDLL

CHANGES:
+ change schema of Implementation Version Name in META-INF/MANIFEST.MF and
  A-ASSOCIATE-RQ/AC to dcm4che-1.x.y (from DCM4CHEyyyymmdd)
+ add properties port and serverSocketFactory to org.dcm4che.server.Server
+ org.dcm4che.data.DcmObject: change getter methodes to do not throw
  org.dcm4che.data.DcmValueException, but return null or default value, if
  a decoding error occurs.
+ org.dcm4che.image.ColorModelFactory: replace DcmValueException by
  IllegalArgumentException 
  

-------------------------------------------------------------------------------
dcm4che 1.0.5 -  - Changes since dcm4che 1.0.4
-------------------------------------------------------------------------------
BUG FIXES:
+ org.dcm4che.srom.HL7Export#toHL7(String..):
  Fix Inconsistence between API and Implementation of String argument order
+ Fix bug in mppssnd utility (did not send anything)
+ add missing Def of Tag (0040,030E) Exposure Dose Sequence

ENHANCEMENTS:
org.dcm4che.data.Dataset:
+ Float getFloat(tag, index)
+ Double getDouble(tag, index)
org.dcm4che.hl7.MSHSegment
+ String getCharset

CHANGES:
+ ren build target publish to release